--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <header>
         <nav>
             <img>
-            <container>
-                
-            </container>
+            <ul>
+                <a href="#Inicio">
+                    <li>Inicio</li>
+                </a>
+                <a href="#Somos">
+                    <li>¿Quiénes somos?</li>
+                </a>
+                <a href="#Programas">
+                    <li>Programas</li>
+                </a>
+                <a href="#Formulario">
+                    <li>Matrícula</li>
+                </a>
+                <a href="#Contacto">
+                    <li>Contacto</li>
+                </a>
+            </ul>
         </nav>
     </header>
     <main>
@@ -68,16 +82,29 @@
             </ul>
         </section>
         <section id="Programas">
-
-        </section>
-        <section id="Preguntas frecuentes">
-
+            <h2>Programas</h2>
+            <article>
+                <h3>Clases particulares</h3>
+                <p>Enfocadas en proporcionar una atención personalizada, las clases particulares son sesiones de aprendizaje individualizadas, adaptadas a las necesidades y ritmo de cada estudiante. Este enfoque permite al profesor centrarse específicamente en los desafíos y fortalezas del alumno, brindando una experiencia educativa más personal y efectiva.</p>
+            </article>
+            <article>
+                <h3>Programa Sabatino</h3>
+                <p>El Programa Sabatino se refiere a un plan de estudios o actividades educativas que tienen lugar específicamente los sábados. Este enfoque es común en instituciones educativas o cursos adicionales que buscan ofrecer opciones flexibles para aquellos que tienen compromisos durante la semana laboral. Es una alternativa para aquellos que buscan mejorar sus habilidades o adquirir conocimientos sin interferir con sus responsabilidades diarias.</p>
+            </article>
+            <article>
+                <h3>Preparación de prácticas y exámenes</h3>
+                <p>Este servicio se dedica a preparar a los estudiantes para enfrentar evaluaciones académicas, ya sean prácticas o exámenes formales. Implica la revisión y práctica de los conceptos clave, el desarrollo de estrategias para abordar preguntas y la familiarización con el formato de las evaluaciones. El objetivo es maximizar el rendimiento del estudiante durante estos momentos críticos de evaluación.</p>
+            </article>
+            <article>
+                <h3>Leer y escribir refuerzo</h3>
+                <p>Diseñado para mejorar las habilidades de lectura y escritura de los estudiantes, este programa de refuerzo se enfoca en fortalecer la comprensión lectora, la expresión escrita y las habilidades lingüísticas en general. Puede incluir actividades prácticas, ejercicios específicos y técnicas pedagógicas destinadas a desarrollar la competencia y confianza del estudiante en el ámbito de la lectura y la escritura.</p>
+            </article>
         </section>
         <section id="Formulario">
 
         </section>
     </main>
-    <footer>
+    <footer id="Contacto">
 
     </footer>
 </body>
