--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Grupo de Estudios centrado en reforzar lo aprendido en clases, acompañar al alumno y mejorar su confianza.">
+
+    <meta property="og:title" content="Grupo de Estudios San Agustín">
+    <meta property="og:image" content="./img/Logo.jpg">
+    <meta property="og:image:alt" content="Logo del Grupo de Estudio San Agustín">
+
     <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon">
     <title>GSA</title>
 </head>
 <body>
     <header>
         <nav>
-            <img>
+            <img title="GSA" src="img/icon.png" alt="Logo del Grupo de Estudio San Agustín" width="100">
             <ul>
                 <a href="#Inicio">
                     <li>Inicio</li>
@@ -170,20 +176,20 @@
     <footer id="Contacto">
         <h2>Conéctate con nosotros para impulsar tu aprendizaje</h2>
         <div>
-            <a href="mailto:">
+            <a href="mailto:" rel="noreferrer" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-inbox" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
                     <path d="M4 13h3l3 3h4l3 -3h3" />
                 </svg>
             </a>
-            <a href="https://www.facebook.com/profile.php?id=100064267292503">
+            <a href="https://www.facebook.com/profile.php?id=100064267292503" rel="noreferrer" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                 </svg>
             </a>
-            <a href="https://www.instagram.com/grupo_de_estudio_sa/">
+            <a href="https://www.instagram.com/grupo_de_estudio_sa/" rel="noreferrer" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
@@ -191,7 +197,7 @@
                     <path d="M16.5 7.5l0 .01" />
                 </svg>
             </a>
-            <a href="https://www.tiktok.com/@grupo_de_estudio_sa?is_from_webapp=1&sender_device=pc">
+            <a href="https://www.tiktok.com/@grupo_de_estudio_sa?is_from_webapp=1&sender_device=pc" rel="noreferrer" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M21 7.917v4.034a9.948 9.948 0 0 1 -5 -1.951v4.5a6.5 6.5 0 1 1 -8 -6.326v4.326a2.5 2.5 0 1 0 4 2v-11.5h4.083a6.005 6.005 0 0 0 4.917 4.917z" />
