Starting with CSS, navbar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Grupo de Estudios centrado en reforzar lo aprendido en clases, acompañar al alumno y mejorar su confianza.">
 
+    <link rel="stylesheet" href="./stylesheets/style.css">
+
     <meta property="og:title" content="Grupo de Estudios San Agustín">
     <meta property="og:image" content="./img/Logo.jpg">
     <meta property="og:image:alt" content="Logo del Grupo de Estudio San Agustín">
@@ -14,7 +16,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <img title="GSA" src="img/icon.png" alt="Logo del Grupo de Estudio San Agustín" width="100">
             <ul>
                 <a href="#Inicio">
