--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section id="inicio">
-           <img title="Grupo de Estudio San Agustín" alt="Logo del grupo de Estudio San Agustín" src="/img/Logo.jpg" width="200">
+           <img title="Grupo de Estudio San Agustín" alt="Logo del grupo de Estudio San Agustín" src="/img/logo.png" width="200">
            <h1>Grupo de Estudio San Agustín</h3>
            <p>Construyamos juntos el camino hacia el éxito académico de sus hijos. ¡Confíe en nosotros para potenciar su aprendizaje y desarrollo!</p>
         </section>
