--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Grupo de Estudios centrado en reforzar lo aprendido en clases, acompañar al alumno y mejorar su confianza.">
 
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="Grupo de Estudios San Agustín">
     <meta property="og:image" content="./img/Logo.jpg">
@@ -38,7 +41,7 @@
         </nav>
     </header>
     <main>
-        <section id="inicio">
+        <section id="Inicio">
            <img title="Grupo de Estudio San Agustín" alt="Logo del grupo de Estudio San Agustín" src="/img/logo.png" width="200">
            <h1>Grupo de Estudio San Agustín</h3>
            <p>Construyamos juntos el camino hacia el éxito académico de sus hijos. ¡Confíe en nosotros para potenciar su aprendizaje y desarrollo!</p>
