--- a/index.html
+++ b/index.html
@@ -96,22 +96,39 @@
         </section>
         <section id="Programas">
             <h2>Programas</h2>
-            <article>
-                <h3>Clases particulares</h3>
-                <p>Enfocadas en proporcionar una atención personalizada, las clases particulares son sesiones de aprendizaje individualizadas, adaptadas a las necesidades y ritmo de cada estudiante. Este enfoque permite al profesor centrarse específicamente en los desafíos y fortalezas del alumno, brindando una experiencia educativa más personal y efectiva.</p>
-            </article>
-            <article>
-                <h3>Programa Sabatino</h3>
-                <p>El Programa Sabatino se refiere a un plan de estudios o actividades educativas que tienen lugar específicamente los sábados. Este enfoque es común en instituciones educativas o cursos adicionales que buscan ofrecer opciones flexibles para aquellos que tienen compromisos durante la semana laboral. Es una alternativa para aquellos que buscan mejorar sus habilidades o adquirir conocimientos sin interferir con sus responsabilidades diarias.</p>
-            </article>
-            <article>
-                <h3>Preparación de prácticas y exámenes</h3>
-                <p>Este servicio se dedica a preparar a los estudiantes para enfrentar evaluaciones académicas, ya sean prácticas o exámenes formales. Implica la revisión y práctica de los conceptos clave, el desarrollo de estrategias para abordar preguntas y la familiarización con el formato de las evaluaciones. El objetivo es maximizar el rendimiento del estudiante durante estos momentos críticos de evaluación.</p>
-            </article>
-            <article>
-                <h3>Leer y escribir refuerzo</h3>
-                <p>Diseñado para mejorar las habilidades de lectura y escritura de los estudiantes, este programa de refuerzo se enfoca en fortalecer la comprensión lectora, la expresión escrita y las habilidades lingüísticas en general. Puede incluir actividades prácticas, ejercicios específicos y técnicas pedagógicas destinadas a desarrollar la competencia y confianza del estudiante en el ámbito de la lectura y la escritura.</p>
-            </article>
+            <div class="container">
+                <article class="program">
+                    <div class="program__text">
+                        <h3>Clases particulares</h3>
+                        <p>Las clases particulares ofrecen atención personalizada, adaptándose a las necesidades y ritmo de cada estudiante. Este enfoque permite al profesor abordar específicamente los desafíos y fortalezas del alumno, proporcionando una experiencia educativa más efectiva.</p>
+                    </div>
+                    <img src="./img/clasesParticulares.png" alt="" class="program__img">
+                </article>
+                <article class="program">
+                    <div class="program__text">
+                        <h3>Programa Sabatino</h3>
+                        <p>
+                            El Programa Sabatino consiste en actividades educativas los sábados, siendo una opción flexible para aquellos con compromisos laborales durante la semana. Es una alternativa que permite mejorar habilidades o adquirir conocimientos sin interferir con responsabilidades diarias.</p>
+                    </div>
+                    <img src="./img/programaSabatino.png" alt="" class="program__img">
+                </article>
+                <article class="program">
+                    <div class="program__text">
+                        <h3>Preparación de prácticas y exámenes</h3>
+                        <p>
+                            Este servicio prepara a estudiantes para evaluaciones académicas mediante la revisión de conceptos clave, práctica de estrategias para abordar preguntas y familiarización con el formato de las pruebas. Busca maximizar el rendimiento del estudiante en momentos críticos de evaluación.</p>
+                    </div>
+                    <img src="./img/preparacion.png" alt="" class="program__img">
+                </article>
+                <article class="program">
+                    <div class="program__text">
+                        <h3>Leer y escribir refuerzo</h3>
+                        <p>
+                            Este programa de refuerzo está diseñado para mejorar las habilidades de lectura y escritura de los estudiantes, centrándose en fortalecer la comprensión lectora, la expresión escrita y habilidades lingüísticas en general. Incluye actividades prácticas, ejercicios específicos y técnicas pedagógicas para desarrollar la competencia y confianza del estudiante en lectura y escritura.</p> 
+                    </div>
+                    <img src="./img/leerEscribir.png" alt="" class="program__img">
+                </article>
+            </div>
         </section>
         <section id="Formulario">
             <div>
