--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#Formulario">
                     <li>Matrícula</li>
                 </a>
-                <a href="#Contacto">
+                <a href="#Contact">
                     <li>Contacto</li>
                 </a>
             </ul>
@@ -188,7 +188,7 @@
             </div>
         </section>
     </main>
-    <footer id="Contacto">
+    <footer id="Contact">
         <h2>Conéctate con nosotros para impulsar tu aprendizaje</h2>
         <div>
             <a href="mailto:" rel="noreferrer" target="_blank">
