--- a/index.html
+++ b/index.html
@@ -96,36 +96,38 @@
         </section>
         <section id="Programas">
             <h2>Programas</h2>
-            <div class="container" style="--num-program: 4">
-                <div class="program__progress"></div>
-                <article class="program">
-                    <div class="program__text">
-                        <h3>Clases particulares</h3>
-                        <p>Las clases particulares ofrecen atención personalizada, adaptándose a las necesidades y ritmo de cada estudiante. Este enfoque permite al profesor abordar específicamente los desafíos y fortalezas del alumno, proporcionando una experiencia educativa más efectiva.</p>
-                    </div>
-                    <img src="./img/clasesParticulares.png" alt="" class="program__img">
-                </article>
-                <article class="program">
-                    <div class="program__text">
-                        <h3>Programa Sabatino</h3>
-                        <p>El Programa Sabatino consiste en actividades educativas los sábados, siendo una opción flexible para aquellos con compromisos laborales durante la semana. Es una alternativa que permite mejorar habilidades o adquirir conocimientos sin interferir con responsabilidades diarias.</p>
-                    </div>
-                    <img src="./img/programaSabatino.png" alt="" class="program__img">
-                </article>
-                <article class="program">
-                    <div class="program__text">
-                        <h3>Preparación de prácticas y exámenes</h3>
-                        <p>Este servicio prepara a estudiantes para evaluaciones académicas mediante la revisión de conceptos clave, práctica de estrategias para abordar preguntas y familiarización con el formato de las pruebas. Busca maximizar el rendimiento del estudiante en momentos críticos de evaluación.</p>
-                    </div>
-                    <img src="./img/preparacion.png" alt="" class="program__img">
-                </article>
-                <article class="program">
-                    <div class="program__text">
-                        <h3>Leer y escribir refuerzo</h3>
-                        <p>Este programa de refuerzo está diseñado para mejorar las habilidades de lectura y escritura de los estudiantes, centrándose en fortalecer la comprensión lectora, la expresión escrita y habilidades lingüísticas en general. Incluye actividades prácticas, ejercicios específicos y técnicas pedagógicas para desarrollar la competencia y confianza del estudiante en lectura y escritura.</p> 
-                    </div>
-                    <img src="./img/leerEscribir.png" alt="" class="program__img">
-                </article>
+            <div id="help" style="--num-programs: 4">
+                <div class="container">
+                    <div class="program__progress"></div>
+                    <article class="program">
+                        <div class="program__text">
+                            <h3>Clases particulares</h3>
+                            <p>Las clases particulares ofrecen atención personalizada, adaptándose a las necesidades y ritmo de cada estudiante. Este enfoque permite al profesor abordar específicamente los desafíos y fortalezas del alumno, proporcionando una experiencia educativa más efectiva.</p>
+                        </div>
+                        <img src="./img/clasesParticulares.png" alt="" class="program__img">
+                    </article>
+                    <article class="program">
+                        <div class="program__text">
+                            <h3>Programa Sabatino</h3>
+                            <p>El Programa Sabatino consiste en actividades educativas los sábados, siendo una opción flexible para aquellos con compromisos laborales durante la semana. Es una alternativa que permite mejorar habilidades o adquirir conocimientos sin interferir con responsabilidades diarias.</p>
+                        </div>
+                        <img src="./img/programaSabatino.png" alt="" class="program__img">
+                    </article>
+                    <article class="program">
+                        <div class="program__text">
+                            <h3>Preparación de prácticas y exámenes</h3>
+                            <p>Este servicio prepara a estudiantes para evaluaciones académicas mediante la revisión de conceptos clave, práctica de estrategias para abordar preguntas y familiarización con el formato de las pruebas. Busca maximizar el rendimiento del estudiante en momentos críticos de evaluación.</p>
+                        </div>
+                        <img src="./img/preparacion.png" alt="" class="program__img">
+                    </article>
+                    <article class="program">
+                        <div class="program__text">
+                            <h3>Leer y escribir refuerzo</h3>
+                            <p>Este programa de refuerzo está diseñado para mejorar las habilidades de lectura y escritura de los estudiantes, centrándose en fortalecer la comprensión lectora, la expresión escrita y habilidades lingüísticas en general. Incluye actividades prácticas, ejercicios específicos y técnicas pedagógicas para desarrollar la competencia y confianza del estudiante en lectura y escritura.</p> 
+                        </div>
+                        <img src="./img/leerEscribir.png" alt="" class="program__img">
+                    </article>
+                </div>
             </div>
         </section>
         <section id="Formulario">
